--- a/ubuntu/etc/sysctl.conf
+++ b/ubuntu/etc/sysctl.conf
@@ -57,6 +57,7 @@
 #
 # Log Martian Packets
 #net.ipv4.conf.all.log_martians = 1
-#
+# CIS Specific Config for Hardening
 fs.suid_dumpable = 0
+kernel.randomize_va_space = 2
 
