--- a/ubuntu/etc/audit/auditd.conf
+++ b/ubuntu/etc/audit/auditd.conf
@@ -17,7 +17,7 @@ max_log_file = 6
 max_log_file_action = keep 
 space_left = 75
 space_left_action = email 
-action_mail_acct = root
+action_mail_acct = jra 
 admin_space_left = 50
 admin_space_left_action = halt 
 disk_full_action = SUSPEND
